src/styles/Index.css
.index-tile-wrapper {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    margin-top: 5%;
    font-family: 'Poppins', sans-serif;
}

.index-background {
    width: 300px;
    height: 200px;
}

.index-link {
    color: black;
    text-decoration: none;
}

.add-background-form {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    gap: 10px;
}

.submit-button {
    background-color: rgb(204, 204, 204);
    color: rgb(23, 137, 230);
    font-family: 'Poppins', sans-serif;
}

figcaption h1 {
    color: rgb(0, 106, 192);
}

/* START Index page image hover effects */
figure.effect-index #index-background{
    opacity: 0.9;
    transition: 0.3s;
    -webkit-transition: opacity 0.35s;
}

figure.effect-index:hover {
    opacity: 0.7;
}

figure.effect-index figcaption::before,
figure.effect-index figcaption::after {
    content: '';
    opacity: 0;
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
}

figure.effect-index figcaption::before {
    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;
    -webkit-transform: scale(0,1);
    transform: scale(0,1);
}

figure.effect-index figcaption::after {
    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;
    -webkit-transform: scale(1,0);
    transform: scale(1,0);
}

figure.effect-index h1 {
    opacity: 0;
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
    -webkit-transform: translate3d(0, 20px, 0);
    transform: translate3d(0, 20px, 0);
}

figure.effect-index:hover figcaption::before,
figure.effect-index:hover figcaption::after {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
}

figure.effect-index:hover h1 {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}

/* END Index page image hover effects */

